<resources>
    <string name="app_name">Mina Turer</string>

    <string name="find_stop">Find stop</string>
    <string name="type_to_filter">Type to filter…</string>
    <string name="my_stops">My stops</string>
    <string name="delete">DELETE</string>
    <string name="stop_added">Stop added:</string>
    <string name="filtered">Filtered</string>
    <string name="reset">Reset</string>
    <string name="tip">Tip</string>
    <string name="got_it">Got it</string>
    <string name="landing_page_hint">This page will allow you to quickly access all your stored stops.\n\nSwipe left to remove a stop, tap the add button to register a new stop.</string>
    <string name="find_stop_page_hint">Search for a specific stop by typing in its name or a part of its name.\n\nTap the stop you would like to register on the landing page.</string>
    <string name="departure_page_hint">Click the filter toolbar button to select which departures to show.\n\nPull the list down to perform a refresh of the departures.\n\nTap a departure to see detailed journey information.\n\nTap the options button to configure which transport types to include in results.</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="none">None</string>
    <string name="apply">Apply</string>
    <string name="journey_details">Journey details</string>
    <string name="track">Track</string>
    <string name="travel_time">minutes travel time from start</string>
    <string name="information">Information</string>
    <string name="rate_text">Enjoying Mina Turer?\n\nIf so, please rate it with five stars at Google Play so that we can continue to update and improve it!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="stop_abbr">S</string>
    <string name="settings">Settings</string>
    <string name="express_train">Express train, Arlanda Express</string>
    <string name="regional_train">Regional train, InterCity train</string>
    <string name="express_bus">Express bus, airport buses</string>
    <string name="local_train">Local train, Pågatåg, Öresundståg</string>
    <string name="subway">Subway</string>
    <string name="tram">Tram</string>
    <string name="bus">Bus</string>
    <string name="ferry">Ferry, Foreign Ferry</string>
    <string name="select_product_types">Select which transportation types you would like to include in your departure results.</string>

</resources>
